Municipios list handler
