# app/server.go
@@ -57,6 +57,7 @@ func (server Server) Run() {
 	protected := server.app.Group("/api", authMiddleware(server.config))
 	protected.Get("/deps", handlers.DepsHandler(server.db))
 	protected.Get("/provs/dep/:depid", handlers.ProvsHandler(server.db))
+	protected.Get("/muns/prov/:provid", handlers.MunsHandler(server.db))
 
 	server.app.Listen(fmt.Sprintf(":%s", server.config.App.Port))
 }
